--- a/firstproject/account/templates/profile.html
+++ b/firstproject/account/templates/profile.html
@@ -33,7 +33,7 @@
               </div>
               <div>
                 <h4 class="mb-1">Hey, {{ user.username }}</h4>
-                <p class="text-muted mb-0">Welcome to your profile 👋</p>
+                <p class="text-muted mb-0">Welcome to your profile </p>
               </div>
             </div>
 
