--- a/firstproject/product/templates/index.html
+++ b/firstproject/product/templates/index.html
@@ -8,6 +8,7 @@
   <title>{% block title %}Le Marche{% endblock %}</title>
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
 
   <style>
     /* BODY */
@@ -213,6 +214,24 @@
         margin-top: 0.75rem;
       }
     }
+
+    /* Mobile-friendly navbar icons */
+    @media (max-width: 767.98px) {
+      .nav-link-text {
+        display: none;
+      }
+      .navbar-nav .nav-link {
+        padding: 0.5rem;
+        font-size: 1.2rem;
+      }
+      .navbar-toggler {
+        margin-left: auto;
+      }
+      .navbar-brand {
+        font-size: 1.25rem;
+      }
+    }
+    
   </style>
 </head>
 
@@ -298,7 +317,10 @@
         
             <li class="nav-item d-flex align-items-center">
               <span class="nav-link nav-username d-flex align-items-center">
-                👋 {{ user.username }}
+                <a href="{% url 'profile' %}" class="nav-link">
+  {{ user.username }}
+</a>
+
                 {% if user.is_staff %}
                   <span class="badge rounded-pill text-bg-dark ms-2">
                     Admin
@@ -313,10 +335,7 @@
               </li>
             {% endif %}
 
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'profile' %}">Profile</a>
-            </li>
-
+           
             <li class="nav-item">
               <a class="nav-link" href="{% url 'logout' %}">Logout</a>
             </li>
